--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
 <!-- WELCOME -->
 <section class="welcome fade">
   <div class="welcome__content">
-    <h2>Дорогие родные и близкие</h2>
+    <h2>Дорогие друзья, родные и близкие</h2>
     <p>
-      В этот важный для нас день.<br>
-      Мы хотим оказаться в окружении самых<br>
-      близких и дорогих для нас людей,<br>
-      искренне и от всей души<br>
-      будем рады видеть Вас среди гостей на нашей свадьбе!<br>
+      Мы счастливы пригласить Вас на нашу свадьбу<br>
+      Для нас очень важно, чтобы Вы смогли разделить с нами<br>
+      самое счастливое мгновени в нашей жизни.<br>
+      Очень будем рады видеть Вас среди гостей на нашей свадьбе!<br>
     </p>
     <div class="welcome__signature">8 августа 2026 года</div>
   </div>
@@ -290,3 +289,4 @@
 <script src="JS/main.js"></script>
 </body>
 </html>
+
