--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="hero__line"></div>
 
     <p class="hero__subtitle">
-      Дорогая <strong>Бабушка Маша</strong>!
-      Мы с радостью приглашаем тебя разделить с нами день, 
-      когда начнется наша новая семейная история. День, когда мы скажем друг другу "ДА!"<br>
+      Для нас не существует семи чудес света
+      Есть только одно - это <strong>Любовь</strong>. 
+      День когда мы скажем друг другу то самое заветное "ДА!"<br>
     </p>
     <p class="hero__personal fade"></p>
     <span class="hero__date">08 · 08 · 2026</span>
@@ -289,4 +289,5 @@
 <script src="JS/main.js"></script>
 </body>
 </html>
+
 
