--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p class="hero__subtitle">
       Для нас не существует семи чудес света
       Есть только одно - это <strong>Любовь</strong>. 
-      День когда мы скажем друг другу то самое заветное "ДА!"<br>
+      День, когда мы скажем друг другу то самое заветное "ДА!"<br>
     </p>
     <p class="hero__personal fade"></p>
     <span class="hero__date">08 · 08 · 2026</span>
@@ -289,5 +289,6 @@
 <script src="JS/main.js"></script>
 </body>
 </html>
+
 
 
